updates to sota experiment

--- a/evaluation/Classification_Analysis_sota.ipynb
+++ b/evaluation/Classification_Analysis_sota.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -117,11 +117,18 @@
       "Stability & xGB & xGB & xGB & xGB & xGB & xGB \\\\\n",
       "Dataset & CE & CCE & L_VA & S_VA & L & S \\\\\n",
       "\\hline\n",
-      "haberman & 4.1e-34 & 5.3e-34 & 1.1e-63 & 0.0e+00 & 1.0e-04 & 2.7e-33 & 1.2e-33 & 8.7e-34 & 9.5e-64 & 0.0e+00 & 4.5e-05 & 9.8e-34 \\\\\n",
-      "hepati & 6.2e-34 & 0.0e+00 & 6.5e-05 & 4.9e-33 & 3.0e-05 & 6.0e-05 & 3.5e-33 & 3.5e-33 & 8.0e-05 & 0.0e+00 & 1.2e-05 & 2.2e-06 \\\\\n",
-      "pc1req & 1.5e-34 & 7.7e-35 & 1.2e-11 & 3.1e-33 & 7.7e-05 & 5.1e-33 & 1.5e-33 & 1.5e-33 & 1.9e-11 & 1.9e-33 & 3.7e-05 & 1.6e-33 \\\\\n",
+      "haberman & 4e-34 & 5e-34 & 1e-63 & 0e+00 & 1e-04 & 3e-33 & 1e-33 & 9e-34 & 9e-64 & 0e+00 & 4e-05 & 1e-33 \\\\\n",
+      "heartC & 8e-34 & 0e+00 & 2e-10 & 1e-32 & 7e-05 & 1e-04 & 4e-33 & 3e-33 & 2e-10 & 5e-33 & 1e-05 & 5e-06 \\\\\n",
+      "heartH & 6e-37 & 6e-37 & 2e-10 & 0e+00 & 5e-05 & 9e-05 & 5e-33 & 5e-33 & 2e-10 & 2e-32 & 8e-06 & 8e-06 \\\\\n",
+      "heartS & 2e-34 & 2e-33 & 7e-11 & 6e-33 & 6e-05 & 5e-05 & 4e-33 & 5e-33 & 7e-11 & 1e-32 & 1e-05 & 3e-06 \\\\\n",
+      "hepati & 6e-34 & 0e+00 & 7e-05 & 5e-33 & 3e-05 & 6e-05 & 4e-33 & 4e-33 & 8e-05 & 0e+00 & 1e-05 & 2e-06 \\\\\n",
+      "je4243 & 7e-34 & 6e-34 & 5e-06 & 2e-34 & 9e-05 & 2e-33 & 2e-33 & 3e-33 & 1e-05 & 2e-34 & 1e-05 & 8e-34 \\\\\n",
+      "pc1req & 2e-34 & 8e-35 & 1e-11 & 3e-33 & 8e-05 & 5e-33 & 2e-33 & 1e-33 & 2e-11 & 2e-33 & 4e-05 & 2e-33 \\\\\n",
+      "spect & 0e+00 & 0e+00 & 3e-12 & 1e-32 & 1e-05 & 3e-05 & 6e-34 & 6e-34 & 4e-12 & 1e-32 & 3e-06 & 7e-06 \\\\\n",
+      "transfusion & 9e-34 & 5e-34 & 7e-64 & 0e+00 & 7e-05 & 3e-33 & 2e-33 & 4e-33 & 7e-64 & 0e+00 & 3e-05 & 1e-33 \\\\\n",
+      "vote & 0e+00 & 0e+00 & 3e-11 & 4e-33 & 6e-05 & 8e-05 & 8e-33 & 8e-33 & 3e-11 & 0e+00 & 1e-05 & 2e-05 \\\\\n",
       "\\hline\n",
-      "Average & 3.9e-34 & 2.0e-34 & 2.2e-05 & 2.7e-33 & 6.9e-05 & 2.0e-05 & 2.1e-33 & 2.0e-33 & 2.7e-05 & 6.4e-34 & 3.1e-05 & 7.2e-07 \\\\\n"
+      "Average & 4e-34 & 3e-34 & 7e-06 & 4e-33 & 6e-05 & 4e-05 & 3e-33 & 3e-33 & 9e-06 & 6e-33 & 2e-05 & 4e-06 \\\\\n"
      ]
     }
    ],
@@ -140,7 +147,7 @@
     "n = results['test_size']\n",
     "r = results['num_rep']\n",
     "print('Stability & xGB & xGB & xGB & xGB & xGB & xGB \\\\\\\\')\n",
-    "print('Dataset & CE & CCE & L_VA & S_VA & L & S \\\\\\\\\\n\\\\hline')\n",
+    "print('Dataset & CE & CCE & L_C & S_C & L_U & S_U \\\\\\\\\\n\\\\hline')\n",
     "for d in np.sort([k for k in results.keys()]):\n",
     "    if d in ['test_size', 'num_rep']:\n",
     "        continue\n",
@@ -186,12 +193,12 @@
     "        # print(f'{np.mean([t[1] if t[1] > 1e-20 else 0 for t in stab_val[\"ce\"]]):.1e} & {np.var([t[1] if t[1] > 1e-20 else 0 for t in stab_val[\"cce\"]]):.1e} & ',end='')\n",
     "        \n",
     "        for key in ['ce', 'cce', 'lime_va', 'shap_va', 'lime', 'shap']:\n",
-    "            print(f' & {average_results[a+\"_stab_\"+key][d]:.1e}',end='')\n",
+    "            print(f' & {average_results[a+\"_stab_\"+key][d]:.0e}',end='')\n",
     "    print(' \\\\\\\\')\n",
     "print('\\\\hline\\nAverage', end='')\n",
     "for a in algorithms:\n",
     "    for key in ['ce', 'cce', 'lime_va', 'shap_va', 'lime', 'shap']:\n",
-    "        print(f' & {np.mean([v for v in average_results[a+\"_stab_\"+key].values()]):.1e}',end='')\n",
+    "        print(f' & {np.mean([v for v in average_results[a+\"_stab_\"+key].values()]):.0e}',end='')\n",
     "print(' \\\\\\\\')"
    ]
   },
@@ -204,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -215,10 +222,17 @@
       "Dataset & CE & CCE & L_VA & S_VA & VA & L & S & UC \\\\\n",
       "\\hline\n",
       "haberman & 0.011 & 0.009 & 0.000 & 0.000 & 0.010 & 0.008 & 0.011 & 0.033 & 0.011 & 0.009 & 0.000 & 0.000 & 0.009 & 0.004 & 0.004 & 0.024 \\\\\n",
-      "hepati & 0.021 & 0.018 & 0.000 & 0.001 & 0.008 & 0.011 & 0.006 & 0.028 & 0.014 & 0.014 & 0.000 & 0.001 & 0.007 & 0.003 & 0.001 & 0.022 \\\\\n",
-      "pc1req & 0.013 & 0.012 & 0.009 & 0.004 & 0.007 & 0.017 & 0.011 & 0.025 & 0.014 & 0.013 & 0.009 & 0.004 & 0.007 & 0.004 & 0.004 & 0.023 \\\\\n",
+      "heartC & 0.014 & 0.014 & 0.001 & 0.001 & 0.006 & 0.006 & 0.004 & 0.025 & 0.012 & 0.011 & 0.001 & 0.001 & 0.005 & 0.001 & 0.001 & 0.020 \\\\\n",
+      "heartH & 0.016 & 0.015 & 0.171 & 0.002 & 0.004 & 0.006 & 0.004 & 0.022 & 0.011 & 0.011 & 0.186 & 0.001 & 0.003 & 0.001 & 0.001 & 0.019 \\\\\n",
+      "heartS & 0.020 & 0.020 & 0.001 & 0.001 & 0.003 & 0.005 & 0.003 & 0.021 & 0.017 & 0.015 & 0.002 & 0.001 & 0.003 & 0.002 & 0.001 & 0.020 \\\\\n",
+      "hepati & 0.021 & 0.018 & 0.000 & 0.001 & 0.003 & 0.011 & 0.006 & 0.021 & 0.014 & 0.014 & 0.000 & 0.001 & 0.003 & 0.003 & 0.001 & 0.020 \\\\\n",
+      "je4243 & 0.011 & 0.009 & 0.003 & 0.000 & 0.003 & 0.005 & 0.008 & 0.021 & 0.010 & 0.007 & 0.002 & 0.000 & 0.003 & 0.001 & 0.001 & 0.020 \\\\\n",
+      "pc1req & 0.013 & 0.012 & 0.009 & 0.004 & 0.003 & 0.017 & 0.011 & 0.022 & 0.014 & 0.013 & 0.009 & 0.004 & 0.003 & 0.004 & 0.004 & 0.021 \\\\\n",
+      "spect & 0.007 & 0.007 & 0.003 & 0.001 & 0.003 & 0.003 & 0.002 & 0.020 & 0.006 & 0.006 & 0.004 & 0.002 & 0.003 & 0.001 & 0.000 & 0.019 \\\\\n",
+      "transfusion & 0.008 & 0.006 & 0.000 & 0.000 & 0.004 & 0.004 & 0.008 & 0.020 & 0.008 & 0.006 & 0.000 & 0.000 & 0.004 & 0.003 & 0.003 & 0.020 \\\\\n",
+      "vote & 0.014 & 0.014 & 0.001 & 0.001 & 0.004 & 0.002 & 0.002 & 0.020 & 0.011 & 0.011 & 0.001 & 0.001 & 0.003 & 0.001 & 0.001 & 0.019 \\\\\n",
       "\\hline\n",
-      "Average & 0.015 & 0.013 & 0.003 & 0.002 & 0.008 & 0.012 & 0.009 & 0.029 & 0.013 & 0.012 & 0.003 & 0.002 & 0.008 & 0.004 & 0.003 & 0.023 \\\\\n"
+      "Average & 0.013 & 0.012 & 0.019 & 0.001 & 0.004 & 0.007 & 0.006 & 0.023 & 0.011 & 0.011 & 0.020 & 0.001 & 0.004 & 0.002 & 0.002 & 0.020 \\\\\n"
      ]
     }
    ],
@@ -242,7 +256,7 @@
     "r = results['num_rep']\n",
     "\n",
     "print('Robustness & xGB & xGB & xGB & xGB & xGB & xGB & xGB & xGB \\\\\\\\')\n",
-    "print('Dataset & CE & CCE & L_VA & S_VA & VA & L & S & UC \\\\\\\\\\n\\\\hline')\n",
+    "print('Dataset & CE & CCE & L_C & S_C & C & L_U & S_U & U \\\\\\\\\\n\\\\hline')\n",
     "for d in np.sort([k for k in results.keys()]):\n",
     "    if d in ['test_size', 'num_rep']:\n",
     "        continue\n",
@@ -310,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The robustness is not yet analyzed.  \n",
+    "Here, the picture is somewhat different, as CE and CCE have higher variability in their feature weights compared to LIME and SHAP. The results for CE and CCE are clearly lower than the uncalibrated model (U) from which they have been extracted and slightly more than the VA calibrated model (C). While these results could be interpreted as indicating low robustness, we argue that the experiment shows that the method updates its feature weights in accordance with how much the underlying model is changing its predictions. A similar pattern could be seen when comparing LIME and SHAP explanations from calibrated vs uncalibrated models, with low variability for the explanations of calibrated models having themselves lower variability and vice versa.\n",
     "\n",
     "### 4 Computing time- not updated\n",
     "Now, lets look at the runtime taken to compute the explanations. The tabulated runtimes are the average time in seconds per instance. The results are printed as a latex table."
