minor adjustments to ablation analysis

--- a/evaluation/Classification_Analysis_Ablation.ipynb
+++ b/evaluation/Classification_Analysis_Ablation.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -37,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +86,7 @@
    "metadata": {},
    "source": [
     "### 3 Ablation analysis\n",
-    "The ablation analysis is focused on evaluating how tth algorithm i affected by the calibration size and the number of percentiles sampled for numerical features. It is using a similar setup as the stability experiment, but with the following changes:\n",
+    "The ablation analysis is focused on evaluating how the algorithm is affected by the calibration size and the number of percentiles sampled for numerical features. It is using a similar setup as the stability experiment, but with the following changes:\n",
     "* The number of percentiles sampled for numerical features is varied between 1, 2, 3 (default), 4, and 9. The set of percentiles used are: [50], [33, 67], [25, 50, 75], [20, 40, 60, 80], [10, 20, 30, 40, 50, 60, 70, 80, 90]\n",
     "* The calibration size is varied between 10%, 20% and 40% of the data not used for testing.\n",
     "* Test size is fixed to 10% of the data. \n",
@@ -103,7 +94,7 @@
     "\n",
     "Everything was run on 25 datasets. See the `Classification_Experiment_Ablation.py` for details on the experiment.\n",
     "\n",
-    "The tabulated results are the mean variance of the ablation measured over per calibration size or percentile sampling. The variance is measured per instance and computed over the runs having the same calibration size/percentile sampling on the feature importance weight of the most influential feature, defined as the feature most often having highest absolute feature importance weight. The average variance is computed over the entire test set. The most influential feature is used since it is the feature that is most likely to be used in a decision but also the feature with the greatest expected variation (as a consequence of the weights having the highest absolute values). \n",
+    "The tabulated results are the mean variance of the ablation measured per calibration size or percentile sampling. The variance is measured per instance and computed over the runs having the same calibration size/percentile sampling on the feature importance weight of the most influential feature, defined as the feature most often having highest absolute feature importance weight. The average variance is computed over the entire test set. The most influential feature is used since it is the feature that is most likely to be used in a decision but also the feature with the greatest expected variation (as a consequence of the weights having the highest absolute values). \n",
     "\n",
     "#### 3.1 Calibration Size\n",
     "First out is a table with results per calibration size. Since different sampling sizes may result in different results for numerical features, the mean variance is only expected to be 0 for categorical-only datasets. The results are printed as a latex table."
@@ -111,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +189,7 @@
     "            for cal in ablation[key]: \n",
     "                print(' & ', end='')  \n",
     "                for j in range(n):\n",
-    "                    values = [ablation[key][cal][p][0][j]['predict'][ranking[key][j][0]] for p in ablation[key][cal]]\n",
+    "                    values = [ablation[key][cal][p][0][j]['predict'][ranking[key][j]] for p in ablation[key][cal]]\n",
     "                    value.append([np.mean(values), np.var(values)])\n",
     "                val[key] = value \n",
     "\n",
@@ -509,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
