--- a/evaluation/Classification_Analysis_sota.ipynb
+++ b/evaluation/Classification_Analysis_sota.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -121,21 +121,31 @@
       "Stability & xGB & xGB & xGB & xGB & xGB & xGB \\\\\n",
       "Dataset & CE & CCE & L_C & S_C & L_U & S_U \\\\\n",
       "\\hline\n",
+      "colic & 0e+00 & 0e+00 & 1e-08 & 3e-33 & 4e-05 & 1e-04 & 3e-32 & 3e-32 & 1e-08 & 1e-33 & 5e-06 & 8e-06 \\\\\n",
+      "creditA & 0e+00 & 2e-34 & 1e-61 & 0e+00 & 4e-05 & 1e-04 & 1e-32 & 1e-32 & 7e-61 & 0e+00 & 8e-06 & 1e-05 \\\\\n",
+      "diabetes & 2e-34 & 2e-33 & 4e-11 & 0e+00 & 9e-05 & 3e-33 & 1e-33 & 4e-33 & 2e-11 & 3e-36 & 3e-05 & 1e-33 \\\\\n",
+      "german & 4e-35 & 2e-35 & 6e-11 & 9e-33 & 8e-05 & 8e-05 & 2e-33 & 2e-33 & 6e-11 & 5e-33 & 3e-05 & 4e-05 \\\\\n",
       "haberman & 4e-34 & 5e-34 & 1e-63 & 0e+00 & 1e-04 & 3e-33 & 1e-33 & 9e-34 & 9e-64 & 0e+00 & 4e-05 & 1e-33 \\\\\n",
       "heartC & 8e-34 & 0e+00 & 2e-10 & 1e-32 & 7e-05 & 1e-04 & 4e-33 & 3e-33 & 2e-10 & 5e-33 & 1e-05 & 5e-06 \\\\\n",
       "heartH & 6e-37 & 6e-37 & 2e-10 & 0e+00 & 5e-05 & 9e-05 & 5e-33 & 5e-33 & 2e-10 & 2e-32 & 8e-06 & 8e-06 \\\\\n",
       "heartS & 2e-34 & 2e-33 & 7e-11 & 6e-33 & 6e-05 & 5e-05 & 4e-33 & 5e-33 & 7e-11 & 1e-32 & 1e-05 & 3e-06 \\\\\n",
       "hepati & 6e-34 & 0e+00 & 7e-05 & 5e-33 & 3e-05 & 6e-05 & 4e-33 & 4e-33 & 8e-05 & 0e+00 & 1e-05 & 2e-06 \\\\\n",
+      "iono & 2e-33 & 2e-33 & 3e-05 & 1e-32 & 9e-05 & 1e-04 & 3e-33 & 5e-33 & 4e-05 & 7e-33 & 3e-05 & 6e-06 \\\\\n",
+      "je4042 & 2e-33 & 2e-34 & 2e-06 & 1e-32 & 1e-04 & 5e-33 & 3e-33 & 8e-33 & 5e-06 & 1e-32 & 2e-05 & 1e-33 \\\\\n",
       "je4243 & 7e-34 & 6e-34 & 5e-06 & 2e-34 & 9e-05 & 2e-33 & 2e-33 & 3e-33 & 1e-05 & 2e-34 & 1e-05 & 8e-34 \\\\\n",
       "kc2 & 7e-34 & 1e-33 & 4e-64 & 0e+00 & 7e-05 & 2e-04 & 1e-33 & 2e-33 & 1e-63 & 0e+00 & 5e-06 & 2e-05 \\\\\n",
       "kc3 & 4e-35 & 4e-35 & 4e-06 & 0e+00 & 3e-05 & 9e-05 & 4e-34 & 6e-34 & 4e-06 & 0e+00 & 1e-05 & 5e-06 \\\\\n",
+      "liver & 2e-33 & 4e-33 & 1e-63 & 0e+00 & 1e-04 & 6e-33 & 5e-33 & 9e-33 & 1e-63 & 0e+00 & 3e-05 & 2e-33 \\\\\n",
       "pc1req & 2e-34 & 8e-35 & 1e-11 & 3e-33 & 8e-05 & 5e-33 & 2e-33 & 1e-33 & 2e-11 & 2e-33 & 4e-05 & 2e-33 \\\\\n",
+      "sonar & 4e-34 & 2e-34 & 8e-07 & 8e-35 & 9e-05 & 1e-04 & 1e-33 & 2e-33 & 1e-08 & 3e-37 & 9e-06 & 3e-06 \\\\\n",
       "spect & 0e+00 & 0e+00 & 3e-12 & 1e-32 & 1e-05 & 3e-05 & 6e-34 & 6e-34 & 4e-12 & 1e-32 & 3e-06 & 7e-06 \\\\\n",
+      "spectf & 1e-34 & 2e-34 & 7e-66 & 0e+00 & 3e-05 & 1e-04 & 1e-33 & 6e-34 & 1e-65 & 0e+00 & 7e-06 & 3e-06 \\\\\n",
       "transfusion & 9e-34 & 5e-34 & 7e-64 & 0e+00 & 7e-05 & 3e-33 & 2e-33 & 4e-33 & 7e-64 & 0e+00 & 3e-05 & 1e-33 \\\\\n",
+      "ttt & 0e+00 & 0e+00 & 2e-10 & 6e-33 & 8e-05 & 3e-04 & 2e-32 & 2e-32 & 2e-10 & 2e-32 & 8e-06 & 2e-05 \\\\\n",
       "vote & 0e+00 & 0e+00 & 3e-11 & 4e-33 & 6e-05 & 8e-05 & 8e-33 & 8e-33 & 3e-11 & 0e+00 & 1e-05 & 2e-05 \\\\\n",
       "wbc & 2e-33 & 2e-34 & 3e-05 & 0e+00 & 1e-04 & 2e-33 & 1e-33 & 5e-33 & 3e-05 & 0e+00 & 4e-05 & 8e-34 \\\\\n",
       "\\hline\n",
-      "Average & 5e-34 & 4e-34 & 8e-06 & 3e-33 & 6e-05 & 6e-05 & 3e-33 & 3e-33 & 1e-05 & 4e-33 & 2e-05 & 5e-06 \\\\\n"
+      "Average & 6e-34 & 6e-34 & 6e-06 & 4e-33 & 7e-05 & 7e-05 & 5e-33 & 6e-33 & 7e-06 & 4e-33 & 2e-05 & 7e-06 \\\\\n"
      ]
     }
    ],
@@ -218,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -228,21 +238,31 @@
       "Robustness & xGB & xGB & xGB & xGB & xGB & xGB & xGB & xGB \\\\\n",
       "Dataset & CE & CCE & L_C & S_C & C & L_U & S_U & U \\\\\n",
       "\\hline\n",
-      "haberman & 0.011 & 0.009 & 0.000 & 0.000 & 0.010 & 0.008 & 0.011 & 0.033 & 0.011 & 0.009 & 0.000 & 0.000 & 0.009 & 0.004 & 0.004 & 0.024 \\\\\n",
-      "heartC & 0.014 & 0.014 & 0.001 & 0.001 & 0.006 & 0.006 & 0.004 & 0.025 & 0.012 & 0.011 & 0.001 & 0.001 & 0.005 & 0.001 & 0.001 & 0.020 \\\\\n",
-      "heartH & 0.016 & 0.015 & 0.171 & 0.002 & 0.004 & 0.006 & 0.004 & 0.022 & 0.011 & 0.011 & 0.186 & 0.001 & 0.003 & 0.001 & 0.001 & 0.019 \\\\\n",
-      "heartS & 0.020 & 0.020 & 0.001 & 0.001 & 0.003 & 0.005 & 0.003 & 0.021 & 0.017 & 0.015 & 0.002 & 0.001 & 0.003 & 0.002 & 0.001 & 0.020 \\\\\n",
-      "hepati & 0.021 & 0.018 & 0.000 & 0.001 & 0.003 & 0.011 & 0.006 & 0.021 & 0.014 & 0.014 & 0.000 & 0.001 & 0.003 & 0.003 & 0.001 & 0.020 \\\\\n",
-      "je4243 & 0.011 & 0.009 & 0.003 & 0.000 & 0.003 & 0.005 & 0.008 & 0.021 & 0.010 & 0.007 & 0.002 & 0.000 & 0.003 & 0.001 & 0.001 & 0.020 \\\\\n",
-      "kc2 & 0.019 & 0.010 & 0.000 & 0.000 & 0.003 & 0.011 & 0.009 & 0.022 & 0.007 & 0.005 & 0.000 & 0.000 & 0.004 & 0.000 & 0.001 & 0.021 \\\\\n",
-      "kc3 & 0.006 & 0.005 & 0.013 & 0.000 & 0.004 & 0.003 & 0.001 & 0.020 & 0.005 & 0.005 & 0.012 & 0.000 & 0.005 & 0.001 & 0.000 & 0.019 \\\\\n",
-      "pc1req & 0.013 & 0.012 & 0.009 & 0.004 & 0.005 & 0.017 & 0.011 & 0.020 & 0.014 & 0.013 & 0.009 & 0.004 & 0.005 & 0.004 & 0.004 & 0.020 \\\\\n",
-      "spect & 0.007 & 0.007 & 0.003 & 0.001 & 0.005 & 0.003 & 0.002 & 0.019 & 0.006 & 0.006 & 0.004 & 0.002 & 0.005 & 0.001 & 0.000 & 0.018 \\\\\n",
-      "transfusion & 0.008 & 0.006 & 0.000 & 0.000 & 0.005 & 0.004 & 0.008 & 0.019 & 0.008 & 0.006 & 0.000 & 0.000 & 0.005 & 0.003 & 0.003 & 0.019 \\\\\n",
-      "vote & 0.014 & 0.014 & 0.001 & 0.001 & 0.005 & 0.002 & 0.002 & 0.019 & 0.011 & 0.011 & 0.001 & 0.001 & 0.005 & 0.001 & 0.001 & 0.019 \\\\\n",
-      "wbc & 0.020 & 0.012 & 0.001 & 0.000 & 0.004 & 0.008 & 0.003 & 0.018 & 0.018 & 0.009 & 0.001 & 0.000 & 0.004 & 0.003 & 0.001 & 0.018 \\\\\n",
+      "colic & 0.017 & 0.017 & 0.001 & 0.000 & 0.000 & 0.006 & 0.002 & 0.015 & 0.017 & 0.017 & 0.001 & 0.000 & 0.000 & 0.001 & 0.000 & 0.009 \\\\\n",
+      "creditA & 0.023 & 0.022 & 0.000 & 0.000 & 0.000 & 0.002 & 0.003 & 0.010 & 0.015 & 0.015 & 0.000 & 0.000 & 0.000 & 0.000 & 0.001 & 0.009 \\\\\n",
+      "diabetes & 0.017 & 0.009 & 0.000 & 0.000 & 0.001 & 0.004 & 0.005 & 0.014 & 0.015 & 0.007 & 0.000 & 0.000 & 0.001 & 0.001 & 0.001 & 0.012 \\\\\n",
+      "german & 0.003 & 0.003 & 0.006 & 0.002 & 0.001 & 0.006 & 0.006 & 0.014 & 0.005 & 0.004 & 0.002 & 0.001 & 0.001 & 0.001 & 0.001 & 0.014 \\\\\n",
+      "haberman & 0.011 & 0.009 & 0.000 & 0.000 & 0.002 & 0.008 & 0.011 & 0.016 & 0.011 & 0.009 & 0.000 & 0.000 & 0.003 & 0.004 & 0.004 & 0.016 \\\\\n",
+      "heartC & 0.014 & 0.014 & 0.001 & 0.001 & 0.003 & 0.006 & 0.004 & 0.017 & 0.012 & 0.011 & 0.001 & 0.001 & 0.002 & 0.001 & 0.001 & 0.016 \\\\\n",
+      "heartH & 0.016 & 0.015 & 0.171 & 0.002 & 0.002 & 0.006 & 0.004 & 0.017 & 0.011 & 0.011 & 0.186 & 0.001 & 0.002 & 0.001 & 0.001 & 0.016 \\\\\n",
+      "heartS & 0.020 & 0.020 & 0.001 & 0.001 & 0.002 & 0.005 & 0.003 & 0.017 & 0.017 & 0.015 & 0.002 & 0.001 & 0.002 & 0.002 & 0.001 & 0.017 \\\\\n",
+      "hepati & 0.021 & 0.018 & 0.000 & 0.001 & 0.002 & 0.011 & 0.006 & 0.018 & 0.014 & 0.014 & 0.000 & 0.001 & 0.002 & 0.003 & 0.001 & 0.017 \\\\\n",
+      "iono & 0.026 & 0.010 & 0.025 & 0.005 & 0.003 & 0.015 & 0.004 & 0.016 & 0.013 & 0.007 & 0.035 & 0.005 & 0.003 & 0.002 & 0.001 & 0.016 \\\\\n",
+      "je4042 & 0.019 & 0.014 & 0.004 & 0.001 & 0.003 & 0.013 & 0.010 & 0.017 & 0.015 & 0.009 & 0.003 & 0.001 & 0.003 & 0.002 & 0.001 & 0.016 \\\\\n",
+      "je4243 & 0.011 & 0.009 & 0.003 & 0.000 & 0.003 & 0.005 & 0.008 & 0.017 & 0.010 & 0.007 & 0.002 & 0.000 & 0.003 & 0.001 & 0.001 & 0.017 \\\\\n",
+      "kc2 & 0.019 & 0.010 & 0.000 & 0.000 & 0.003 & 0.011 & 0.009 & 0.018 & 0.007 & 0.005 & 0.000 & 0.000 & 0.003 & 0.000 & 0.001 & 0.018 \\\\\n",
+      "kc3 & 0.006 & 0.005 & 0.013 & 0.000 & 0.003 & 0.003 & 0.001 & 0.017 & 0.005 & 0.005 & 0.012 & 0.000 & 0.004 & 0.001 & 0.000 & 0.017 \\\\\n",
+      "liver & 0.026 & 0.013 & 0.000 & 0.000 & 0.004 & 0.003 & 0.006 & 0.017 & 0.030 & 0.014 & 0.000 & 0.000 & 0.004 & 0.001 & 0.002 & 0.017 \\\\\n",
+      "pc1req & 0.013 & 0.012 & 0.009 & 0.004 & 0.004 & 0.017 & 0.011 & 0.018 & 0.014 & 0.013 & 0.009 & 0.004 & 0.004 & 0.004 & 0.004 & 0.018 \\\\\n",
+      "sonar & 0.017 & 0.008 & 0.001 & 0.001 & 0.004 & 0.006 & 0.004 & 0.018 & 0.009 & 0.005 & 0.000 & 0.000 & 0.004 & 0.000 & 0.000 & 0.017 \\\\\n",
+      "spect & 0.007 & 0.007 & 0.003 & 0.001 & 0.004 & 0.003 & 0.002 & 0.017 & 0.006 & 0.006 & 0.004 & 0.002 & 0.004 & 0.001 & 0.000 & 0.017 \\\\\n",
+      "spectf & 0.006 & 0.004 & 0.000 & 0.000 & 0.004 & 0.001 & 0.002 & 0.017 & 0.005 & 0.004 & 0.000 & 0.000 & 0.004 & 0.000 & 0.000 & 0.017 \\\\\n",
+      "transfusion & 0.008 & 0.006 & 0.000 & 0.000 & 0.004 & 0.004 & 0.008 & 0.017 & 0.008 & 0.006 & 0.000 & 0.000 & 0.004 & 0.003 & 0.003 & 0.017 \\\\\n",
+      "ttt & 0.014 & 0.014 & 0.000 & 0.003 & 0.004 & 0.001 & 0.002 & 0.017 & 0.025 & 0.025 & 0.000 & 0.003 & 0.004 & 0.000 & 0.000 & 0.017 \\\\\n",
+      "vote & 0.014 & 0.014 & 0.001 & 0.001 & 0.004 & 0.002 & 0.002 & 0.017 & 0.011 & 0.011 & 0.001 & 0.001 & 0.003 & 0.001 & 0.001 & 0.016 \\\\\n",
+      "wbc & 0.020 & 0.012 & 0.001 & 0.000 & 0.003 & 0.008 & 0.003 & 0.016 & 0.018 & 0.009 & 0.001 & 0.000 & 0.003 & 0.003 & 0.001 & 0.016 \\\\\n",
       "\\hline\n",
-      "Average & 0.014 & 0.012 & 0.016 & 0.001 & 0.005 & 0.007 & 0.005 & 0.022 & 0.011 & 0.010 & 0.017 & 0.001 & 0.004 & 0.002 & 0.001 & 0.020 \\\\\n"
+      "Average & 0.015 & 0.012 & 0.010 & 0.001 & 0.003 & 0.006 & 0.005 & 0.016 & 0.013 & 0.010 & 0.011 & 0.001 & 0.003 & 0.002 & 0.001 & 0.016 \\\\\n"
      ]
     }
    ],
