--- a/evaluation/Classification_plots.ipynb
+++ b/evaluation/Classification_plots.ipynb
@@ -73,6 +73,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Diabetes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
