--- a/evaluation/Classification_Analysis_Ablation.ipynb
+++ b/evaluation/Classification_Analysis_Ablation.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
     "            for p in ablation[key][cal]: \n",
     "                print(' & ', end='')  \n",
     "                for j in range(n):\n",
-    "                    values = [ablation[key][cal][p][0][j]['predict'][ranking[key][j][0]] for cal in ablation[key]]\n",
+    "                    values = [ablation[key][cal][p][0][j]['predict'][ranking[key][j]] for cal in ablation[key]]\n",
     "                    value.append([np.mean(values), np.var(values)])\n",
     "                val[key] = value \n",
     "\n",
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
