--- a/evaluation/Mondrian_Fairness_Experiment.ipynb
+++ b/evaluation/Mondrian_Fairness_Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,18 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "base width: \t 0.00789581 \t 0.00755456\n",
-      "rand width: \t 0.0234697 \t 0.0215656\n",
-      "race width: \t 0.0198963 \t 0.0188424\n",
-      "sex width: \t 0.0117098 \t 0.011652\n",
-      "age width: \t 0.0218998 \t 0.0215902\n"
+      "base width: \t 0.00736803 \t 0.00746037\n",
+      "rand width: \t 0.0227246 \t 0.0211287\n",
+      "race width: \t 0.0192262 \t 0.0188397\n",
+      "sex width: \t 0.0111202 \t 0.0115664\n",
+      "age width: \t 0.0215532 \t 0.0210299\n"
      ]
     }
    ],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,18 +588,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "base width: \t 0.00346173 \t 0.00354606\n",
-      "rand width: \t 0.0110103 \t 0.0116639\n",
-      "race width: \t 0.00760357 \t 0.00714946\n",
-      "sex width: \t 0.00539862 \t 0.00516846\n",
-      "edu width: \t 0.0184215 \t 0.0166535\n"
+      "base width: \t 0.00326076 \t 0.00354104\n",
+      "rand width: \t 0.0109691 \t 0.0112308\n",
+      "race width: \t 0.00751947 \t 0.00761529\n",
+      "sex width: \t 0.00522884 \t 0.00529675\n",
+      "edu width: \t 0.0178852 \t 0.0170594\n"
      ]
     }
    ],
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,26 +861,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "base width: \t 11.072 \t 0.0488581\n",
-      "rand width: \t nan \t 0.125517\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'crm'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[106], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m attr \u001b[38;5;129;01min\u001b[39;00m attribute_names:\n\u001b[0;32m      2\u001b[0m     results[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgerman\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmondrian\u001b[39m\u001b[38;5;124m'\u001b[39m][attr] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(mondrian[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m'\u001b[39m][attr])\n\u001b[1;32m----> 3\u001b[0m     results[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgerman\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel_split\u001b[39m\u001b[38;5;124m'\u001b[39m][attr] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(\u001b[43mmodel_split\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mwidth\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mattr\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mattr\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m width: \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mnp\u001b[38;5;241m.\u001b[39mmean(mondrian[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m\"\u001b[39m][attr])\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m 2g\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mnp\u001b[38;5;241m.\u001b[39mmean(model_split[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m\"\u001b[39m][attr])\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m 2g\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'crm'"
+      "base width: \t 0.0449486 \t 0.0469801\n",
+      "rand width: \t 0.134121 \t 0.119509\n",
+      "sex width: \t 0.099784 \t 0.101003\n",
+      "age width: \t 0.131775 \t 0.125053\n"
      ]
     }
    ],
@@ -900,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,15 +1111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "f-string: unmatched '[' (832776445.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[110], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f'{attr} width: \\t{np.mean(mondrian['width'][attr]): 2g} \\t{np.mean(model_split['width'][attr]): 2g} ')\u001b[0m\n\u001b[1;37m                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m f-string: unmatched '['\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "base width: \t 9.90189 \t 9.83211 \n",
+      "rand width: \t 12.7567 \t 17.8389 \n",
+      "crm width: \t 13.8097 \t 15.034 \n"
      ]
     }
    ],
@@ -1136,7 +1128,7 @@
     "for attr in attribute_names:\n",
     "    results['boston']['mondrian'][attr] = np.mean(mondrian['width'][attr])\n",
     "    results['boston']['model_split'][attr] = np.mean(model_split['width'][attr])\n",
-    "    print(f'{attr} width: \\t{np.mean(mondrian['width'][attr]): 2g} \\t{np.mean(model_split['width'][attr]): 2g} ')"
+    "    print(f'{attr} width: \\t{np.mean(mondrian[\"width\"][attr]): 2g} \\t{np.mean(model_split[\"width\"][attr]): 2g} ')"
    ]
   },
   {
@@ -1149,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1157,10 +1149,10 @@
      "output_type": "stream",
      "text": [
       "Dataset\t Model Split\t Mondrian\tType\n",
-      "COMPAS\t 13.00\t\t 62.69\t\tclassification\n",
-      "adult\t 62.74\t\t 263.66\t\tclassification\n",
-      "german\t 2.73\t\t 21.50\t\tclassification\n",
-      "boston\t 0.00\t\t 0.00\t\tregression\n"
+      "COMPAS\t 12.93\t\t 70.26\t\tclassification\n",
+      "adult\t 72.51\t\t 333.01\t\tclassification\n",
+      "german\t 3.97\t\t 29.83\t\tclassification\n",
+      "boston\t 6.18\t\t 22.18\t\tregression\n"
      ]
     }
    ],
@@ -1183,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1192,10 +1184,10 @@
      "text": [
       "\t mondrian\t model_split\t mondrian\t model_split\t mondrian\t model_split\t mondrian\t model_split\t mondrian\t model_split\t mondrian\t model_split\t mondrian\t model_split\t\n",
       "Dataset\t base\t\t base\t\t rand\t\t rand\t\t race\t\t race\t\t sex\t\t sex\t\t age\t\t age\t\t edu\t\t edu\t\t crm\t\t crm\t\tType\n",
-      "COMPAS\t 0.0079\t\t 0.0076\t\t 0.0235\t\t 0.0216\t\t 0.0199\t\t 0.0188\t\t 0.0117\t\t 0.0117\t\t 0.0219\t\t 0.0216\t\t -\t\t -\t\t -\t\t -\t\tclassification\n",
-      "adult\t 0.0035\t\t 0.0035\t\t 0.0110\t\t 0.0117\t\t 0.0076\t\t 0.0071\t\t 0.0054\t\t 0.0052\t\t -\t\t -\t\t 0.0184\t\t 0.0167\t\t -\t\t -\t\tclassification\n",
-      "german\t 0.0527\t\t 0.0489\t\t 0.1334\t\t 0.1255\t\t -\t\t -\t\t 0.1009\t\t 0.1037\t\t 0.1357\t\t 0.1261\t\t -\t\t -\t\t -\t\t -\t\tclassification\n",
-      "boston\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\tregression\n"
+      "COMPAS\t 0.007\t\t 0.007\t\t 0.023\t\t 0.021\t\t 0.019\t\t 0.019\t\t 0.011\t\t 0.012\t\t 0.022\t\t 0.021\t\t -\t\t -\t\t -\t\t -\t\tclassification\n",
+      "adult\t 0.003\t\t 0.004\t\t 0.011\t\t 0.011\t\t 0.008\t\t 0.008\t\t 0.005\t\t 0.005\t\t -\t\t -\t\t 0.018\t\t 0.017\t\t -\t\t -\t\tclassification\n",
+      "german\t 0.045\t\t 0.047\t\t 0.134\t\t 0.120\t\t -\t\t -\t\t 0.100\t\t 0.101\t\t 0.132\t\t 0.125\t\t -\t\t -\t\t -\t\t -\t\tclassification\n",
+      "boston\t 9.902\t\t 9.832\t\t 12.757\t\t 17.839\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t -\t\t 13.810\t\t 15.034\t\tregression\n"
      ]
     }
    ],
@@ -1220,7 +1212,7 @@
     "            continue\n",
     "        for category in ['mondrian', 'model_split']:\n",
     "            val = results[name][category][attr]\n",
-    "            print(f'{val: 0.4f}', end='\\t\\t') if val > 0 else print(' -', end='\\t\\t')\n",
+    "            print(f'{val: 0.3f}', end='\\t\\t') if val > 0 else print(' -', end='\\t\\t')\n",
     "    print(f'{type}')"
    ]
   }
