--- a/evaluation/Mondrian_Fairness_Experiment.ipynb
+++ b/evaluation/Mondrian_Fairness_Experiment.ipynb
@@ -2228,7 +2228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Only Mondrian"
+    "#### Mondrian"
    ]
   },
   {
@@ -2270,6 +2270,108 @@
     "        if attr in ['time', 'struct']:\n",
     "            continue\n",
     "        for category in ['mondrian']:\n",
+    "            val = results[name][category][attr]\n",
+    "            print(f'{val: 0.3f}', end='\\t\\t') if val > 0 else print(' -', end='\\t\\t')\n",
+    "    print(f'{type}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mondrian With Excluded Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t mondrian_x\t mondrian_x\t mondrian_x\t mondrian_x\t mondrian_x\t mondrian_x\t mondrian_x\t\n",
+      "Dataset\t base\t\t rand\t\t race\t\t sex\t\t age\t\t edu\t\t crm\t\tType\n",
+      "COMPAS\t 0.008\t\t 0.023\t\t 0.019\t\t 0.012\t\t 0.025\t\t -\t\t -\t\tclassification\n",
+      "Adult\t 0.003\t\t 0.009\t\t 0.006\t\t 0.004\t\t -\t\t 0.015\t\t -\t\tclassification\n",
+      "German\t 0.037\t\t 0.119\t\t -\t\t 0.096\t\t 0.120\t\t -\t\t -\t\tclassification\n",
+      "Housing\t 12.427\t\t 17.003\t\t -\t\t -\t\t -\t\t -\t\t 20.267\t\tregression\n",
+      "CaC\t 0.478\t\t 0.513\t\t 0.451\t\t -\t\t -\t\t -\t\t -\t\tregression\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('', end='\\t')\n",
+    "for attr in results[name]['mondrian_x'].keys():\n",
+    "    if attr in ['time', 'struct']:\n",
+    "        continue\n",
+    "    for category in ['mondrian_x']:\n",
+    "        print(f' {category}', end='\\t')\n",
+    "print('\\nDataset', end='\\t')\n",
+    "for attr in results[name]['mondrian_x'].keys():\n",
+    "    if attr in ['time', 'struct']:\n",
+    "        continue\n",
+    "    for category in ['mondrian_x']:\n",
+    "        print(f' {attr}', end='\\t\\t')\n",
+    "print('Type')\n",
+    "for name, type in datasets.items():\n",
+    "    print(f'{name}\\t', end='')\n",
+    "    for attr in results[name]['mondrian_x'].keys():\n",
+    "        if attr in ['time', 'struct']:\n",
+    "            continue\n",
+    "        for category in ['mondrian_x']:\n",
+    "            val = results[name][category][attr]\n",
+    "            print(f'{val: 0.3f}', end='\\t\\t') if val > 0 else print(' -', end='\\t\\t')\n",
+    "    print(f'{type}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model Select"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t model_split\t model_split\t model_split\t model_split\t model_split\t model_split\t model_split\t\n",
+      "Dataset\t base\t\t rand\t\t race\t\t sex\t\t age\t\t edu\t\t crm\t\tType\n",
+      "COMPAS\t 0.007\t\t 0.020\t\t 0.019\t\t 0.011\t\t 0.020\t\t -\t\t -\t\tclassification\n",
+      "Adult\t 0.003\t\t 0.010\t\t 0.007\t\t 0.005\t\t -\t\t 0.015\t\t -\t\tclassification\n",
+      "German\t 0.042\t\t 0.118\t\t -\t\t 0.089\t\t 0.126\t\t -\t\t -\t\tclassification\n",
+      "Housing\t 11.693\t\t 22.404\t\t -\t\t -\t\t -\t\t -\t\t 21.438\t\tregression\n",
+      "CaC\t 0.436\t\t 0.514\t\t 0.423\t\t -\t\t -\t\t -\t\t -\t\tregression\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('', end='\\t')\n",
+    "for attr in results[name]['model_split'].keys():\n",
+    "    if attr in ['time', 'struct']:\n",
+    "        continue\n",
+    "    for category in ['model_split']:\n",
+    "        print(f' {category}', end='\\t')\n",
+    "print('\\nDataset', end='\\t')\n",
+    "for attr in results[name]['model_split'].keys():\n",
+    "    if attr in ['time', 'struct']:\n",
+    "        continue\n",
+    "    for category in ['model_split']:\n",
+    "        print(f' {attr}', end='\\t\\t')\n",
+    "print('Type')\n",
+    "for name, type in datasets.items():\n",
+    "    print(f'{name}\\t', end='')\n",
+    "    for attr in results[name]['model_split'].keys():\n",
+    "        if attr in ['time', 'struct']:\n",
+    "            continue\n",
+    "        for category in ['model_split']:\n",
     "            val = results[name][category][attr]\n",
     "            print(f'{val: 0.3f}', end='\\t\\t') if val > 0 else print(' -', end='\\t\\t')\n",
     "    print(f'{type}')"
