--- a/notebooks/demo_multiclass.ipynb
+++ b/notebooks/demo_multiclass.ipynb
@@ -107,6 +107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Divide data and use 3 instances from each class as test instances."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -142,6 +149,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train the predictor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -167,75 +181,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examplify how VennAbers can provide probabilities and uncertainty intervals for multi-class. Note that VennAbers output the probabilities and uncertainty intervals for all classes together with the predicted classes. It is obvious from these examples that class 3 and 5 are hardest."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([0.99693251, 0.        , 0.        , 0.00102249, 0.        ,\n",
-      "       0.        ]), 0.0005458515018685226, array([1.00000000e+00, 5.46149618e-04, 6.48929272e-04, 2.04498973e-03,\n",
-      "       6.47249166e-04, 8.16326530e-04]), 0, 0)\n",
-      "(array([0.99693251, 0.        , 0.        , 0.00102249, 0.        ,\n",
-      "       0.        ]), 0.0005458515018685226, array([1.00000000e+00, 5.46149618e-04, 6.48929272e-04, 2.04498973e-03,\n",
-      "       6.47249166e-04, 8.16326530e-04]), 0, 0)\n",
-      "(array([0.99693251, 0.        , 0.        , 0.00102249, 0.        ,\n",
-      "       0.        ]), 0.0005458515018685226, array([1.00000000e+00, 5.46149618e-04, 6.48929272e-04, 2.04498973e-03,\n",
-      "       6.47249166e-04, 8.16326530e-04]), 0, 0)\n",
-      "(array([0.        , 0.99537039, 0.        , 0.00102249, 0.        ,\n",
-      "       0.        ]), 0.9953917225673644, array([6.44329877e-04, 1.00000000e+00, 6.48929272e-04, 2.04498973e-03,\n",
-      "       6.47249166e-04, 8.16326530e-04]), 1, 1)\n",
-      "(array([0.        , 0.97297299, 0.        , 0.00102249, 0.        ,\n",
-      "       0.        ]), 0.9736842257989743, array([2.41545890e-03, 1.00000000e+00, 6.48929272e-04, 2.04498973e-03,\n",
-      "       4.53514745e-03, 8.16326530e-04]), 1, 1)\n",
-      "(array([0.        , 0.99537039, 0.        , 0.00102249, 0.        ,\n",
-      "       0.        ]), 0.9953917225673644, array([6.44329877e-04, 1.00000000e+00, 6.48929272e-04, 2.04498973e-03,\n",
-      "       6.47249166e-04, 8.16326530e-04]), 1, 1)\n",
-      "(array([0.        , 0.        , 0.86666667, 0.08379889, 0.        ,\n",
-      "       0.        ]), 0.0005458515018685226, array([6.44329877e-04, 5.46149618e-04, 9.09090936e-01, 8.93854722e-02,\n",
-      "       6.47249166e-04, 8.16326530e-04]), 2, 2)\n",
-      "(array([0.        , 0.        , 0.95833331, 0.00873362, 0.        ,\n",
-      "       0.        ]), 0.0005458515018685226, array([6.44329877e-04, 5.46149618e-04, 9.91228044e-01, 2.02020202e-02,\n",
-      "       6.47249166e-04, 8.16326530e-04]), 2, 2)\n",
-      "(array([0.        , 0.        , 0.94059408, 0.02380952, 0.        ,\n",
-      "       0.        ]), 0.0005458515018685226, array([6.44329877e-04, 5.46149618e-04, 9.64285731e-01, 4.76190485e-02,\n",
-      "       6.47249166e-04, 8.16326530e-04]), 2, 2)\n",
-      "(array([0.        , 0.        , 0.        , 0.00873362, 0.        ,\n",
-      "       0.96153843]), 0.0005458515018685226, array([6.44329877e-04, 5.46149618e-04, 6.48929272e-04, 1.31004369e-02,\n",
-      "       6.47249166e-04, 9.80769217e-01]), 3, 5)\n",
-      "(array([0.        , 0.        , 0.        , 0.61290324, 0.        ,\n",
-      "       0.5090909 ]), 0.003731343321665382, array([6.44329877e-04, 3.74531839e-03, 6.48929272e-04, 6.45161271e-01,\n",
-      "       6.47249166e-04, 5.71428597e-01]), 3, 3)\n",
-      "(array([0.        , 0.        , 0.        , 0.66037738, 0.00401606,\n",
-      "       0.29268292]), 0.003731343321665382, array([0.00416667, 0.00374532, 0.00411523, 0.69999999, 0.01960784,\n",
-      "       0.31707317]), 3, 3)\n",
-      "(array([0.        , 0.        , 0.        , 0.00574713, 0.9375    ,\n",
-      "       0.        ]), 0.015384615384615385, array([3.44827585e-02, 1.56250000e-02, 6.48929272e-04, 9.95024852e-03,\n",
-      "       1.00000000e+00, 9.70873795e-03]), 4, 4)\n",
-      "(array([0.        , 0.        , 0.        , 0.00102249, 0.97916669,\n",
-      "       0.        ]), 0.037037038365672806, array([2.41545890e-03, 3.84615399e-02, 6.48929272e-04, 2.04498973e-03,\n",
-      "       1.00000000e+00, 4.58715577e-03]), 4, 4)\n",
-      "(array([0.        , 0.        , 0.        , 0.00102249, 0.99224806,\n",
-      "       0.        ]), 0.0005458515018685226, array([6.44329877e-04, 5.46149618e-04, 6.48929272e-04, 2.04498973e-03,\n",
-      "       1.00000000e+00, 8.16326530e-04]), 4, 4)\n",
-      "(array([0.        , 0.        , 0.        , 0.65789473, 0.00401606,\n",
-      "       0.5       ]), 0.003731343321665382, array([6.44329877e-04, 3.74531839e-03, 6.71140943e-03, 6.79245293e-01,\n",
-      "       8.03212821e-03, 5.27272701e-01]), 5, 3)\n",
-      "(array([0.        , 0.        , 0.        , 0.00102249, 0.        ,\n",
-      "       0.97435898]), 0.0005458515018685226, array([6.44329877e-04, 5.46149618e-04, 6.48929272e-04, 2.04498973e-03,\n",
-      "       2.39808159e-03, 1.00000000e+00]), 5, 5)\n",
-      "(array([0.        , 0.        , 0.        , 0.33333334, 0.        ,\n",
-      "       0.5714286 ]), 0.003731343321665382, array([0.00064433, 0.00374532, 0.00411523, 0.40000001, 0.00453515,\n",
-      "       0.64285713]), 5, 5)\n"
+      "(0.9969325065612793, 0.9969418873019156, 1.0, 0, 0)\n",
+      "(0.9969325065612793, 0.9969418873019156, 1.0, 0, 0)\n",
+      "(0.9969325065612793, 0.9969418873019156, 1.0, 0, 0)\n",
+      "(0.9953703880310059, 0.9953917225673644, 1.0, 1, 1)\n",
+      "(0.9729729890823364, 0.9736842257989743, 1.0, 1, 1)\n",
+      "(0.9953703880310059, 0.9953917225673644, 1.0, 1, 1)\n",
+      "(0.8666666746139526, 0.8720930332288732, 0.9090909361839294, 2, 2)\n",
+      "(0.9583333134651184, 0.9596602777594079, 0.9912280440330505, 2, 2)\n",
+      "(0.9405940771102905, 0.9419689291734771, 0.9642857313156128, 2, 2)\n",
+      "(0.9615384340286255, 0.962264124461874, 0.9807692170143127, 3, 5)\n",
+      "(0.6129032373428345, 0.625, 0.6451612710952759, 3, 3)\n",
+      "(0.6603773832321167, 0.6733212463979849, 0.699999988079071, 3, 3)\n",
+      "(0.9375, 0.9411764705882353, 1.0, 4, 4)\n",
+      "(0.9791666865348816, 0.9795918558002366, 1.0, 4, 4)\n",
+      "(0.9922480583190918, 0.9923076886679294, 1.0, 4, 4)\n",
+      "(0.6578947305679321, 0.6650461829967508, 0.6792452931404114, 5, 3)\n",
+      "(0.9743589758872986, 0.9750000014528633, 1.0, 5, 5)\n",
+      "(0.5714285969734192, 0.6000000111262007, 0.6428571343421936, 5, 5)\n"
      ]
     }
    ],
    "source": [
     "va = VennAbers(model.predict_proba(calX), calY, model)\n",
-    "va_proba, low, high, classes = va.predict_proba(testX, output_interval=True)\n",
-    "print(*zip(low, va_proba[:,1], high, testY, classes),sep='\\n')  "
+    "va_proba, low, high, predicted_classes = va.predict_proba(testX, output_interval=True)\n",
+    "print(*zip([low[i,c] for i,c in enumerate(predicted_classes)], [va_proba[i,c] for i,c in enumerate(predicted_classes)], [high[i,c] for i,c in enumerate(predicted_classes)], testY, predicted_classes),sep='\\n')  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a `CallibratedExplainer` from the model and the calibration data. The interface for creating multi-class explanations is identical to binary classification. The explanations provided will indicate the probabilities and uncertainties for the most likely class vs all other classes. \n",
+    "\n",
+    "DISCLAIMER: Currently, the explanations does not support explanations and uncertainties for each possible class, it only explains the class predicted after calibration (which might be different from the prediction made by the underlying model if the calibration alters the probabilities in favor of an alternative class)."
    ]
   },
   {
@@ -265,12 +259,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explain the test set using factual explanations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "factual_explanation = ce.explain_factual(testX)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the explanations with and without uncertainty."
    ]
   },
   {
@@ -654,12 +662,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explain the test set using counterfactual explanations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "counterfactual_explanation = ce.explain_counterfactual(testX)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the counterfactual explanations. "
    ]
   },
   {
