--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -124,31 +124,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Instance 0: Probability [lower and upper bound] for Diabetic:    0.170 [0.154, 0.173]',)\n",
-      "('Instance 1: Probability [lower and upper bound] for Diabetic:    0.048 [0.024, 0.049]',)\n",
-      "('Instance 2: Probability [lower and upper bound] for Diabetic:    0.048 [0.024, 0.049]',)\n",
-      "('Instance 3: Probability [lower and upper bound] for Diabetic:    0.436 [0.426, 0.444]',)\n",
-      "('Instance 4: Probability [lower and upper bound] for Diabetic:    0.667 [0.660, 0.679]',)\n",
-      "('Instance 5: Probability [lower and upper bound] for Diabetic:    0.667 [0.660, 0.679]',)\n",
-      "('Instance 6: Probability [lower and upper bound] for Diabetic:    0.667 [0.660, 0.679]',)\n",
-      "('Instance 7: Probability [lower and upper bound] for Diabetic:    0.667 [0.660, 0.679]',)\n",
-      "('Instance 8: Probability [lower and upper bound] for Diabetic:    0.170 [0.154, 0.173]',)\n",
-      "('Instance 9: Probability [lower and upper bound] for Diabetic:    0.667 [0.660, 0.679]',)\n"
+      "Probability [lower and upper bound] for Diabetic:\n",
+      "('Instance 0: 0.170 [0.154, 0.173]',)\n",
+      "('Instance 1: 0.048 [0.024, 0.049]',)\n",
+      "('Instance 2: 0.048 [0.024, 0.049]',)\n",
+      "('Instance 3: 0.436 [0.426, 0.444]',)\n",
+      "('Instance 4: 0.667 [0.660, 0.679]',)\n",
+      "('Instance 5: 0.667 [0.660, 0.679]',)\n",
+      "('Instance 6: 0.667 [0.660, 0.679]',)\n",
+      "('Instance 7: 0.667 [0.660, 0.679]',)\n",
+      "('Instance 8: 0.170 [0.154, 0.173]',)\n",
+      "('Instance 9: 0.667 [0.660, 0.679]',)\n"
      ]
     }
    ],
    "source": [
     "factual_explanations = ce.explain_factual(testX)\n",
-    "\n",
-    "print(*zip([f\"Instance {i}: Probability [lower and upper bound] for Diabetic:\\\n",
-    "    {exp.prediction['predict']:.3f} [{exp.prediction['low']:5.3f}, {exp.prediction['high']:5.3f}]\" \\\n",
+    "print('Probability [lower and upper bound] for Diabetic:')\n",
+    "print(*zip([f\"Instance {i}: {exp.prediction['predict']:.3f} [{exp.prediction['low']:5.3f}, {exp.prediction['high']:5.3f}]\" \\\n",
     "    for i, exp in enumerate(factual_explanations)]), sep='\\n')"
    ]
   },
