minor updates to under_the_hood demo

--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -15,7 +15,8 @@
     "\n",
     "The purpose of this demo is to show how to access information about the calibrated prediction, uncertainty, and feature rules. The first part loads data, trains a model and creates a calibrated factual explanation.\n",
     "\n",
-    "## Initialization"
+    "## Binary Classification\n",
+    "### Initialization"
    ]
   },
   {
@@ -33,6 +34,7 @@
     }
    ],
    "source": [
+    "# auto reload modules\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -51,6 +53,7 @@
     }
    ],
    "source": [
+    "# Import the necessary libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -67,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load and preprocess the data\n",
     "num_to_test = 10 # number of instances to test, one from each class\n",
     "dataSet = 'diabetes_full'\n",
     "delimiter = ','\n",
@@ -99,6 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train the model and create the explainer\n",
     "model = RandomForestClassifier()\n",
     "\n",
     "model.fit(trainX,trainY)  \n",
@@ -115,7 +120,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Working with Explanations\n",
     "### Epistemic and Aletoric Uncertainty \n",
     "First, lets print the calibrated probabilities with corresponding uncertainty estimates. The information about the prediction can be found in the `prediction` dictionary in each explanation object. It always contain a `predict` field, with the calibrated probability  (classification and probabilistic regression) or prediction (regression), as well as a lower (`low`) and upper (`high`) bound for the value in `predict`. For classification, an additional `classes` field is also available, containing the class for which the probability is calculated for. For binary classification, it is always the positive class, whereas for multi-class, it is the class with highest calibrated probability.\n",
     "\n",
