Results and scripts used in paper.

--- a/evaluation/regression/Regression_Analysis.ipynb
+++ b/evaluation/regression/Regression_Analysis.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,28 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_analysis = False\n",
-    "if full_analysis: \n",
-    "    with open('results_rob.pkl', 'rb') as f:\n",
-    "        results = pickle.load(f)\n",
-    "else:\n",
-    "    with open('results_rob_paper.pkl', 'rb') as f:\n",
-    "        results = pickle.load(f)"
+    "with open('results_regression_test.pkl', 'rb') as f:\n",
+    "    results = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ce': 'FCER',\n",
+       "{'lime': 'LIME',\n",
+       " 'lime_dist': 'LIME Dist',\n",
+       " 'lime_std': 'LIME Std',\n",
+       " 'lime_abs': 'LIME Abs',\n",
+       " 'lime_var': 'LIME Var',\n",
+       " 'shap': 'SHAP',\n",
+       " 'shap_dist': 'SHAP Dist',\n",
+       " 'shap_std': 'SHAP Std',\n",
+       " 'shap_abs': 'SHAP Abs',\n",
+       " 'shap_var': 'SHAP Var',\n",
+       " 'ce': 'FCER',\n",
        " 'ce_dist': 'FCER Dist',\n",
        " 'ce_std': 'FCER Std',\n",
        " 'ce_abs': 'FCER Abs',\n",
@@ -69,27 +83,31 @@
        " 'pcce_dist': 'PCCER Dist',\n",
        " 'pcce_std': 'PCCER Std',\n",
        " 'pcce_abs': 'PCCER Abs',\n",
-       " 'pcce_var': 'PCCER Var'}"
+       " 'pcce_var': 'PCCER Var',\n",
+       " 'lime_base': 'LIME Base',\n",
+       " 'shap_base': 'SHAP Base'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "setup_names = {}\n",
-    "base_names = ['FCER', 'CCER', 'PFCER', 'PCCER']\n",
+    "base_names = ['LIME', 'SHAP', 'FCER', 'CCER', 'PFCER', 'PCCER']\n",
     "norm_names = ['', ' Dist', ' Std', ' Abs', ' Var']\n",
-    "for i, base in enumerate(['ce', 'cce', 'pce', 'pcce']):\n",
+    "for i, base in enumerate(['lime', 'shap', 'ce', 'cce', 'pce', 'pcce']):\n",
     "    for j, setup in enumerate(['', '_dist', '_std', '_abs', '_var']):\n",
     "        setup_names[base + setup] = base_names[i] + norm_names[j]\n",
+    "setup_names['lime_base'] = 'LIME Base'\n",
+    "setup_names['shap_base'] = 'SHAP Base'\n",
     "setup_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -119,62 +137,98 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>FCER</th>\n",
-       "      <td>2.573499e-01</td>\n",
-       "      <td>2.662939e-01</td>\n",
+       "      <th>LIME Base</th>\n",
+       "      <td>0.106</td>\n",
+       "      <td>0.111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CCER</th>\n",
-       "      <td>3.986868e-01</td>\n",
-       "      <td>3.818672e-01</td>\n",
+       "      <th>SHAP Base</th>\n",
+       "      <td>0.057</td>\n",
+       "      <td>0.061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LIME</th>\n",
+       "      <td>0.123</td>\n",
+       "      <td>0.132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LIME Var</th>\n",
+       "      <td>0.231</td>\n",
+       "      <td>0.239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SHAP</th>\n",
+       "      <td>0.501</td>\n",
+       "      <td>0.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SHAP Var</th>\n",
+       "      <td>1.057</td>\n",
+       "      <td>1.126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FCER</th>\n",
+       "      <td>0.280</td>\n",
+       "      <td>0.275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FCER Var</th>\n",
-       "      <td>7.955051e-01</td>\n",
-       "      <td>8.160611e-01</td>\n",
+       "      <td>0.809</td>\n",
+       "      <td>0.900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CCER</th>\n",
+       "      <td>0.411</td>\n",
+       "      <td>0.365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CCER Var</th>\n",
-       "      <td>1.156076e+00</td>\n",
-       "      <td>1.137427e+00</td>\n",
+       "      <td>1.139</td>\n",
+       "      <td>1.244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PFCER</th>\n",
-       "      <td>6.246670e-01</td>\n",
-       "      <td>6.406583e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PCCER</th>\n",
-       "      <td>9.211112e-01</td>\n",
-       "      <td>8.948543e-01</td>\n",
+       "      <td>0.634</td>\n",
+       "      <td>0.666</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PFCER Var</th>\n",
-       "      <td>1.185845e+00</td>\n",
-       "      <td>1.204821e+00</td>\n",
+       "      <td>1.199</td>\n",
+       "      <td>1.429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PCCER</th>\n",
+       "      <td>0.879</td>\n",
+       "      <td>0.918</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PCCER Var</th>\n",
-       "      <td>1.718070e+00</td>\n",
-       "      <td>1.656689e+00</td>\n",
+       "      <td>1.721</td>\n",
+       "      <td>1.724</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Stability   Robustness\n",
-       "FCER      2.573499e-01 2.662939e-01\n",
-       "CCER      3.986868e-01 3.818672e-01\n",
-       "FCER Var  7.955051e-01 8.160611e-01\n",
-       "CCER Var  1.156076e+00 1.137427e+00\n",
-       "PFCER     6.246670e-01 6.406583e-01\n",
-       "PCCER     9.211112e-01 8.948543e-01\n",
-       "PFCER Var 1.185845e+00 1.204821e+00\n",
-       "PCCER Var 1.718070e+00 1.656689e+00"
+       "           Stability  Robustness\n",
+       "LIME Base      0.106       0.111\n",
+       "SHAP Base      0.057       0.061\n",
+       "LIME           0.123       0.132\n",
+       "LIME Var       0.231       0.239\n",
+       "SHAP           0.501       0.500\n",
+       "SHAP Var       1.057       1.126\n",
+       "FCER           0.280       0.275\n",
+       "FCER Var       0.809       0.900\n",
+       "CCER           0.411       0.365\n",
+       "CCER Var       1.139       1.244\n",
+       "PFCER          0.634       0.666\n",
+       "PFCER Var      1.199       1.429\n",
+       "PCCER          0.879       0.918\n",
+       "PCCER Var      1.721       1.724"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,12 +247,13 @@
     "    timer[rob][setup_names[setup]] = np.mean(rob_timer[setup]) / 10 # number of instances \n",
     "\n",
     "timer = pd.DataFrame(timer)\n",
+    "pd.options.display.float_format = \"{:.3f}\".format\n",
     "timer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -229,70 +284,112 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>FCER</th>\n",
-       "      <td>1.047706e-32</td>\n",
-       "      <td>8.010681e-03</td>\n",
-       "      <td>9.068915e-05</td>\n",
+       "      <th>LIME Base</th>\n",
+       "      <td>3.356e-06</td>\n",
+       "      <td>2.968e-05</td>\n",
+       "      <td>2.125e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CCER</th>\n",
-       "      <td>1.848893e-33</td>\n",
-       "      <td>2.053705e-03</td>\n",
-       "      <td>9.068915e-05</td>\n",
+       "      <th>SHAP Base</th>\n",
+       "      <td>0.000e+00</td>\n",
+       "      <td>1.507e-05</td>\n",
+       "      <td>2.125e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LIME</th>\n",
+       "      <td>2.032e-05</td>\n",
+       "      <td>2.726e-05</td>\n",
+       "      <td>2.125e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LIME Var</th>\n",
+       "      <td>9.850e-06</td>\n",
+       "      <td>1.428e-04</td>\n",
+       "      <td>2.125e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SHAP</th>\n",
+       "      <td>0.000e+00</td>\n",
+       "      <td>1.525e-05</td>\n",
+       "      <td>2.125e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SHAP Var</th>\n",
+       "      <td>0.000e+00</td>\n",
+       "      <td>1.295e-05</td>\n",
+       "      <td>2.125e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FCER</th>\n",
+       "      <td>0.000e+00</td>\n",
+       "      <td>5.059e-03</td>\n",
+       "      <td>2.125e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FCER Var</th>\n",
-       "      <td>1.294225e-32</td>\n",
-       "      <td>7.278605e-03</td>\n",
-       "      <td>9.068915e-05</td>\n",
+       "      <td>0.000e+00</td>\n",
+       "      <td>4.250e-03</td>\n",
+       "      <td>2.125e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CCER</th>\n",
+       "      <td>0.000e+00</td>\n",
+       "      <td>6.434e-04</td>\n",
+       "      <td>2.125e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CCER Var</th>\n",
-       "      <td>1.040002e-33</td>\n",
-       "      <td>1.811707e-03</td>\n",
-       "      <td>9.068915e-05</td>\n",
+       "      <td>0.000e+00</td>\n",
+       "      <td>3.894e-04</td>\n",
+       "      <td>2.125e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PFCER</th>\n",
-       "      <td>2.543178e-03</td>\n",
-       "      <td>3.600766e-02</td>\n",
-       "      <td>9.068915e-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PCCER</th>\n",
-       "      <td>2.387989e-03</td>\n",
-       "      <td>1.375770e-02</td>\n",
-       "      <td>9.068915e-05</td>\n",
+       "      <td>1.406e-03</td>\n",
+       "      <td>3.922e-02</td>\n",
+       "      <td>2.125e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PFCER Var</th>\n",
-       "      <td>1.821867e-03</td>\n",
-       "      <td>3.044382e-02</td>\n",
-       "      <td>9.068915e-05</td>\n",
+       "      <td>1.136e-03</td>\n",
+       "      <td>2.093e-02</td>\n",
+       "      <td>2.125e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PCCER</th>\n",
+       "      <td>1.173e-03</td>\n",
+       "      <td>2.672e-03</td>\n",
+       "      <td>2.125e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PCCER Var</th>\n",
-       "      <td>2.901287e-03</td>\n",
-       "      <td>9.606847e-03</td>\n",
-       "      <td>9.068915e-05</td>\n",
+       "      <td>2.564e-03</td>\n",
+       "      <td>1.984e-03</td>\n",
+       "      <td>2.125e-05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Stability   Robustness  Prediction Variance\n",
-       "FCER      1.047706e-32 8.010681e-03         9.068915e-05\n",
-       "CCER      1.848893e-33 2.053705e-03         9.068915e-05\n",
-       "FCER Var  1.294225e-32 7.278605e-03         9.068915e-05\n",
-       "CCER Var  1.040002e-33 1.811707e-03         9.068915e-05\n",
-       "PFCER     2.543178e-03 3.600766e-02         9.068915e-05\n",
-       "PCCER     2.387989e-03 1.375770e-02         9.068915e-05\n",
-       "PFCER Var 1.821867e-03 3.044382e-02         9.068915e-05\n",
-       "PCCER Var 2.901287e-03 9.606847e-03         9.068915e-05"
+       "           Stability  Robustness  Prediction Variance\n",
+       "LIME Base  3.356e-06   2.968e-05            2.125e-05\n",
+       "SHAP Base  0.000e+00   1.507e-05            2.125e-05\n",
+       "LIME       2.032e-05   2.726e-05            2.125e-05\n",
+       "LIME Var   9.850e-06   1.428e-04            2.125e-05\n",
+       "SHAP       0.000e+00   1.525e-05            2.125e-05\n",
+       "SHAP Var   0.000e+00   1.295e-05            2.125e-05\n",
+       "FCER       0.000e+00   5.059e-03            2.125e-05\n",
+       "FCER Var   0.000e+00   4.250e-03            2.125e-05\n",
+       "CCER       0.000e+00   6.434e-04            2.125e-05\n",
+       "CCER Var   0.000e+00   3.894e-04            2.125e-05\n",
+       "PFCER      1.406e-03   3.922e-02            2.125e-05\n",
+       "PFCER Var  1.136e-03   2.093e-02            2.125e-05\n",
+       "PCCER      1.173e-03   2.672e-03            2.125e-05\n",
+       "PCCER Var  2.564e-03   1.984e-03            2.125e-05"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,22 +404,25 @@
     "performance[stab] = {}\n",
     "performance[rob] = {}\n",
     "performance['Prediction Variance'] = np.mean([np.var([robustness['predict'][i][j] for i in range(len(robustness['predict']))]) for j in range(len(robustness['predict'][0]))])\n",
-    "for setup in stability.keys():\n",
-    "    # Get the most important feature for each instance using the absolute value of the feature weights\n",
-    "    stab_feature = []\n",
-    "    rob_feature = []\n",
-    "    for j in range(len(stability[setup][0])): # number of instances        \n",
-    "        stab_feature.append([np.argmax(np.abs(stability[setup][i][j]['predict'])) for i in range(len(stability[setup]))])\n",
-    "        rob_feature.append([np.argmax(np.abs(robustness[setup][i][j]['predict'])) for i in range(len(robustness[setup]))])\n",
-    "    stab_feature = stats.mode(stab_feature, axis=1)\n",
-    "    rob_feature = stats.mode(rob_feature, axis=1)\n",
-    "    \n",
-    "    \n",
-    "    performance[stab][setup_names[setup]] = np.mean([np.var([stability[setup][i][j]['predict'][stab_feature.mode[j]] for i in range(len(stability[setup]))]) for j in range(len(stability[setup][0]))])\n",
-    "    performance[rob][setup_names[setup]] = np.mean([np.var([robustness[setup][i][j]['predict'][rob_feature.mode[j]] for i in range(len(robustness[setup]))]) for j in range(len(robustness[setup][0]))])\n",
+    "try:\n",
+    "    for setup in stability.keys():\n",
+    "        # Get the most important feature for each instance using the absolute value of the feature weights\n",
+    "        stab_feature = []\n",
+    "        rob_feature = []\n",
+    "        for j in range(len(stability[setup][0])): # number of instances        \n",
+    "            stab_feature.append([np.argmax(np.abs(stability[setup][i][j]['predict'])) for i in range(len(stability[setup]))])\n",
+    "            rob_feature.append([np.argmax(np.abs(robustness[setup][i][j]['predict'])) for i in range(len(robustness[setup]))])\n",
+    "        stab_feature = stats.mode(stab_feature, axis=1)\n",
+    "        rob_feature = stats.mode(rob_feature, axis=1)\n",
+    "        \n",
+    "        \n",
+    "        performance[stab][setup_names[setup]] = np.mean([np.var([stability[setup][i][j]['predict'][stab_feature.mode[j]] for i in range(len(stability[setup]))]) for j in range(len(stability[setup][0]))])\n",
+    "        performance[rob][setup_names[setup]] = np.mean([np.var([robustness[setup][i][j]['predict'][rob_feature.mode[j]] for i in range(len(robustness[setup]))]) for j in range(len(robustness[setup][0]))])\n",
+    "except:\n",
+    "    print(setup, robustness[setup])\n",
     "\n",
     "performance = pd.DataFrame(performance)\n",
-    "pd.options.display.float_format = \"{:e}\".format\n",
+    "pd.options.display.float_format = \"{:.3e}\".format\n",
     "performance"
    ]
   }
